--- a/src/style/_base.scss
+++ b/src/style/_base.scss
@@ -47,3 +47,19 @@ body {
   padding-top: 20px;
   max-width: 1096px;
 }
+
+.code-link {
+  cursor: pointer;
+  display: block;
+  position: fixed;
+  bottom: 50%;
+  left: 5px;
+  background-color: #000;
+  color: #fff;
+  border-radius: 50%;
+  z-index: 999999;
+}
+
+.fa-github {
+  font-size: 7rem;
+}
